# Contrarian-Options-Alpha-Engine

./: .gitignore  README.md  pyproject.toml
.github/workflows/: bindings.yml  ci.yml
backtest/: cost_model.py  data_loader.py  data_provider.py  hv_iv_backtest.py  live_monitor.py  metrics.py  monte_carlo.py  replay_engine.py  report.py  requirements.txt  verification.py  walk_forward.py
config/: live_trading.yaml  paper_trading.yaml  risk.yaml  strategy.yaml
docs/: architecture.md  benchmarks.md  strategy_teardown.md
engine/: CMakeLists.txt
engine/benchmarks/: CMakeLists.txt  bench_ring_buffer.cpp
engine/bindings/: CMakeLists.txt  bind_common.cpp  bind_execution.cpp  bind_risk.cpp  bind_strategy.cpp  module.cpp
engine/include/coe/common/: config.hpp  error.hpp  logging.hpp  types.hpp
engine/include/coe/execution/: order.hpp  order_manager.hpp  position.hpp  position_sizer.hpp
engine/include/coe/market_data/: data_feed.hpp  message_types.hpp  ring_buffer.hpp  ws_client.hpp
engine/include/coe/risk/: circuit_breaker.hpp  limits.hpp  pnl_tracker.hpp  risk_manager.hpp
engine/include/coe/strategy/: bollinger.hpp  concepts.hpp  greeks_filter.hpp  pipeline.hpp  rsi.hpp  signal.hpp  volume_spike.hpp
engine/src/common/: CMakeLists.txt  config.cpp  logging.cpp
engine/src/execution/: CMakeLists.txt  order_manager.cpp  position.cpp  position_sizer.cpp
engine/src/market_data/: CMakeLists.txt  ws_client.cpp
engine/src/risk/: CMakeLists.txt  circuit_breaker.cpp  pnl_tracker.cpp  risk_manager.cpp
engine/src/strategy/: CMakeLists.txt  bollinger.cpp  greeks_filter.cpp  pipeline.cpp  rsi.cpp  volume_spike.cpp
engine/tests/common/: CMakeLists.txt  test_config.cpp  test_error.cpp  test_types.cpp
engine/tests/execution/: CMakeLists.txt  test_order_manager.cpp  test_position.cpp  test_position_sizer.cpp
engine/tests/market_data/: CMakeLists.txt  test_message_types.cpp  test_ring_buffer.cpp
engine/tests/risk/: CMakeLists.txt  test_circuit_breaker.cpp  test_pnl_tracker.cpp  test_risk_manager.cpp
engine/tests/strategy/: CMakeLists.txt  test_bollinger.cpp  test_greeks_filter.cpp  test_pipeline.cpp  test_rsi.cpp  test_volume_spike.cpp
services/ingest/: Dockerfile  go.mod  main.go
services/ingest/ingest/: client.go  client_test.go  types.go
src/alerts/: __init__.py  webhook.py
src/broker/: __init__.py  connection.py  index_orders.py  live_trader.py  order_bridge.py  paper_trader.py  reconciliation.py  v2_trader.py
src/coe_engine/: __init__.py
src/dashboard/: app.py
src/dashboard/static/: dashboard.js  style.css
src/dashboard/templates/: index.html
src/signals/: __init__.py  earnings_scanner.py  finbert.py  hv_iv_scanner.py  index_scanner.py  options_chain.py  regime.py  screener.py  sentiment.py  skew.py  technicals.py
tests/: test_bindings.py  test_earnings_scanner.py  test_finbert.py  test_hv_iv_scanner.py  test_options_chain.py  test_order_bridge.py  test_regime.py  test_screener.py  test_sentiment.py  test_skew.py  test_verification.py
