[build-system]
requires = ["scikit-build-core>=0.8", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "contrarian-options-engine"
version = "0.1.0"
description = "Contrarian options alpha engine with C++20 core and Python trading framework"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9.0",
    "anthropic>=0.40.0",
    "cachetools>=5.3.0",
    "ib_insync>=0.9.86",
]

[project.optional-dependencies]
dashboard = [
    "flask>=3.0.0",
    "flask-socketio>=5.3.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
backtest = [
    "matplotlib>=3.8.0",
    "jinja2>=3.1.0",
    "scipy>=1.12.0",
]

[tool.scikit-build]
cmake.source-dir = "engine"
cmake.build-type = "Release"
cmake.args = ["-DBUILD_PYTHON_BINDINGS=ON"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
